<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121212"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/assignmenFour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="30dp"
        android:textSize="25sp"
        android:text="STUDENT   COLLABORATION"
        android:textStyle="bold"
        android:textColor="#908F8F"/>

    <EditText
        android:id="@+id/emailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/assignmenFour" />

    <EditText
        android:id="@+id/passwordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/emailLogin" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="#896804"
        android:textColor="@color/white"
        android:text="Login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordLogin" />

    <TextView
        android:id="@+id/goToRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:padding="20dp"
        android:text="Don't have an account? Register."
        android:textColor="#FFC107"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>