<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    android:background="#3A3937">

    <TextView
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Register Account"
        android:textSize="20sp"
        android:paddingLeft="105dp"
        android:textColor="#B4B3B3"/>

    <EditText
        android:id="@+id/nameRegister"
        android:layout_marginTop="15dp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Full Name"/>

    <EditText
        android:id="@+id/emailRegister"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/white"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/passwordRegister"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_marginTop="10dp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:backgroundTint="#896804"
        android:text="Register"/>

    <TextView
        android:id="@+id/goToLogin"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="Already have an account? Login."
        android:textColor="#FFC107"/>
</LinearLayout>